// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "velostrata-internal.googlesource.com/containerdbg.git/proto";

import "event.proto";

message ContainerAnalysisSummary {
  repeated string missing_files = 1;
  message MoveFailure {
    string source = 1;
    string destination = 2;
  }
  repeated MoveFailure move_failures = 2;
  repeated string missing_libraries = 3;
  message Connection {
    string target_fqdn = 1;
    string target_ip = 2;
    int32 port = 3;
  }
  repeated Connection connection_failures = 4;
  message DnsFailure {
      string query = 1;
      DnsQueryError error = 2;
  }
  repeated DnsFailure dns_failures = 5;

  repeated Connection static_ips = 6;
}

message AnalysisSummary {
  message ContainerSummaryTuple {
    SourceId source = 1;
    ContainerAnalysisSummary summary = 2;
  }
  repeated ContainerSummaryTuple container_summaries = 1;
}
